# rsi-project

./: .env.example  .gitignore  Data Input 2.csv  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  software.md
backend/: .env.example  Dockerfile.backend  README.md  main.py  pyproject.toml  seed_superadmins.py
backend/alembic/: env.py
backend/alembic/versions/: 2601a02b95ab_add_unique_constraint_to_attendance.py  3433de3e2864_add_student_unique_constraints.py  5974ac818a8c_add_unique_constraint_to_socio_economic.py  5e68a6c1d8fd_inisiasi_skema_baru.py  7df955d31ea6_add_last_activity_at.py  824cee6db8ff_add_sp_delete_account.py  92a1a2943ee3_add_index_to_tenant_id.py  9a1b2c3d4e5f_add_entity_name_entity_id_and_notifications.py  a1b2c3d4e5f6_add_deleted_at_to_multiple_tables.py  a1b2c3d4e5f6_ubah_risk_status_ke_integer.py  ba578dd8e6a7_add_indexes_to_tenant_and_student_.py  c97b0bbbefa4_inisiasi_semua_tabel.py  e7b8c9d0e1f2_add_sp_delete_account.py  ed0be41229dc_drop_features_snapshot.py
backend/scripts/: import_template.csv  rls.sql
backend/src/backend/: main.py
backend/src/backend/config/: settings.py
backend/src/backend/controllers/: academic_controller.py  attendance_controller.py  audit_controller.py  audit_log_controller.py  auth_controller.py  counseling_controller.py  dashboard_controller.py  import_data_controller.py  ml_model_controller.py  models_controller.py  monitoring_controller.py  notification_controller.py  prediction_controller.py  reports_controller.py  risk_prediction_controller.py  socio_economic_controller.py  student_controller.py  tenant_controller.py  tenants_controller.py  user_controller.py
backend/src/backend/core/: config.py  database.py  redis_client.py  security.py
backend/src/backend/database/: engine.py  redis.py
backend/src/backend/dto/: __init__.py  academic.py  academic_dto.py  attendance.py  attendance_dto.py  audit_log_dto.py  contact_dto.py  dashboard.py  import_schema.py  intervention.py  ml_model.py  ml_model_dto.py  notification_dto.py  prediction.py  risk_prediction_dto.py  socio_economic_dto.py  student.py  student_dto.py  tenant.py  tenant_dto.py  user.py  user_dto.py
backend/src/backend/middlewares/: auth.py
backend/src/backend/models/: __init__.py  academic.py  attendance.py  audit_log.py  enums.py  intervention.py  ml_model.py  notification.py  risk_prediction.py  socio_economic.py  student.py  tenant.py  user.py
backend/src/backend/repositories/: academic_repo.py  academic_repository.py  attendance_repo.py  (+17 more)
backend/storage/models/: 71d5d1fd-0996-4e47-a879-1a63018631dd.pkl  b3bea12e-b854-4563-9bde-ca49d54346e9.pkl
(+174 files in other folders)
