[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.29",
    "redis>=7.4.0",
    "joblib>=1.3.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.14",
]
